# head-sim

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  cmake-win.bat  play  run.sh
include/controller/: Game.h  StudentFactory.h
include/imgui/: imconfig.h  imgui-SFML.cpp  imgui-SFML.h
include/model/: Actor.h  Class.h  Classroom.h  Game.h  School.h  Student.h  Subject.h  Teacher.h
include/view/: Component.h  GameWindow.h  InfoSheet.h  MainMenu.h  MainView.h  Texturable.h  Utils.h
mod/: dcc.dia
resources/actors/: DataStudents.csv
src/: Main.cpp  Makefile
src/controller/: Game.cpp  StudentFactory.cpp
src/model/: Actor.cpp  Actor.hpp  Class.cpp  Class.h  Class.hpp  Classroom.cpp  Game.cpp  Game.h  School.cpp  School.h  Student.cpp  Student.h  Student.hpp  Subject.cpp  Teacher.cpp  Teacher.h  Teacher.hpp
src/utils/: Time.cpp  Time.h
src/view/: GameWindow.cpp  GameWindow.h  InfoSheet.cpp  MainMenu.cpp  MainView.cpp  Texturable.cpp  Utils.cpp
